# crunchy

./: Install.hs  LICENSE  crunchy.cabal
app/: Main.hs
src/: CatalogReader.hs  Lib.hs  Livestreamer.hs  LocalStorage.hs  mpv_template_script.lua
src/catalog/: onepiece.txt  yurionice.txt
src/guides/: gintama.txt
