name:                crunchy
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Command line interface for crunchyroll built on top of livestreamer
homepage:            https://github.com/GAumala/crunchy#readme
license:             BSD3
license-file:        LICENSE
author:              Gabriel Aumala
maintainer:          example@example.com
copyright:           2016 Gabriel Aumala
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  other-modules:       Livestreamer
                     , CatalogReader
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , directory
                     , filepath
                     , process
                     , text
  default-language:    Haskell2010

executable crunchy-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , crunchy
  default-language:    Haskell2010

test-suite crunchy-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , crunchy
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/GAumala/crunchy
